@@ -20,7 +20,6 @@ import static org.projectnessie.server.catalog.ObjectStorageMockTestResourceLife
 
 import com.google.common.collect.ImmutableMap;
 import io.quarkus.test.junit.QuarkusTestProfile;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -28,8 +27,9 @@ public class GcsUnitTestProfile implements QuarkusTestProfile {
 
   @Override
   public List<TestResourceEntry> testResources() {
-    return Collections.singletonList(
-        new TestResourceEntry(ObjectStorageMockTestResourceLifecycleManager.class));
+    return List.of(
+        new TestResourceEntry(ObjectStorageMockTestResourceLifecycleManager.class),
+        new TestResourceEntry(IcebergResourceLifecycleManager.class));
   }
 
   @Override
